# tzutrader

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  Cargo.toml  Doxyfile  LICENSE  Makefile  README.md  ROADMAP.md  cleaner.sh  config.nims  mkdocs.yml  sample_prices.csv  toremove.txt  tzutrader.nimble  tzutrader.nims  tzutrader_cli.nim
data/: AAPL.csv  BEAR.csv  CYCLE.csv  LONG.csv  MSFT.csv  SIDEWAYS.csv  TEST_output.csv
docs/: 404.html  README.md  getting-started.md  index.html  search.html  sitemap.xml
docs/about_nim/: index.html
docs/api/: core.html  declarative.html  index.html  indicators.html  theindex.html  trader.html  tzutrader.html  tzutrader.idx
docs/architecture/: index.html
docs/contributing/: index.html
docs/faq/: index.html
docs/getting-started/: index.html
docs/html/: annotated.html  annotated_dup.js  classes.html  classtzu_1_1BasicPortfolio-members.html  classtzu_1_1BasicPortfolio.html  classtzu_1_1BasicPortfolio.js  classtzu_1_1BasicRunner-members.html  classtzu_1_1BasicRunner.html  classtzu_1_1BasicRunner.js  classtzu_1_1Csv-members.html  classtzu_1_1Csv.html  classtzu_1_1Csv.js  classtzu_1_1EMA-members.html  classtzu_1_1EMA.html  classtzu_1_1EMA.js  classtzu_1_1Indicator-members.html  classtzu_1_1Indicator.html  classtzu_1_1Indicator.js  classtzu_1_1MACD-members.html  classtzu_1_1MACD.html  classtzu_1_1MACD.js  classtzu_1_1MACDStrat-members.html  classtzu_1_1MACDStrat.html  classtzu_1_1MACDStrat.js  classtzu_1_1MDD-members.html  classtzu_1_1MDD.html  classtzu_1_1MDD.js  classtzu_1_1MVar-members.html  classtzu_1_1MVar.html  classtzu_1_1MVar.js  classtzu_1_1ParseIterator-members.html  classtzu_1_1ParseIterator.html  classtzu_1_1ParseIterator.js  classtzu_1_1Portfolio-members.html  classtzu_1_1Portfolio.html  classtzu_1_1Portfolio.js  classtzu_1_1PortfolioStats-members.html  classtzu_1_1PortfolioStats.html  classtzu_1_1PortfolioStats.js  classtzu_1_1RSI-members.html  (+112 more)
docs/indicators/: index.html
docs/intro-trading/: index.html
docs/javascripts/: mathjax.min.js
docs/mainpage/: index.html
docs/philosophy/: index.html
docs/portfolios/: index.html
docs/reference_guide/: 01_core.md  03_indicators.md  04_strategies.md  04a_strategies_mean_reversion.md  04b_strategies_trend.md  04c_strategies_hybrid.md  05_portfolio.md  06_backtesting.md  07_scanning.md  08_exports.md
docs/search/: search_index.json
docs/strategies/: index.html
docs/stylesheets/: extra.min.css
docs/tzutrader/: core.html
docs_src/: about_nim.md  architecture.md  contributing.md  faq.md  getting-started.md  index.md  indicators.md  intro-trading.md  mainpage.md  philosophy.md  portfolios.md  strategies.md  user-guide.md  utilities.md
examples/: advanced_oscillators_example.nim  advanced_strategies_example.nim  backtest_example.nim  backtesting.cc  bollinger_strategy_example.nim  crossover_strategy_example.nim  csv_example.nim  data_example.nim  data_streamers_demo.nim  datastreamers_example.nim  example01.cc  indicators_example.nim  macd_strategy_example.nim  momentum_indicators_example.nim  moving_averages_example.nim  portfolio_example.nim  risk_management_example.nim  rsi_strategy_example.nim  runner_demo.nim  strategy_example.nim  volume_volatility_example.nim
include/: datastreamers.h  defs.h  indicators.h  portfolios.h  runners.h  strategies.h  streamers.h  tzu.h
scripts/: build_docs.sh  serve_docs.sh
src/: main.cc  main.rs  test.nim  timeutils.cc  types.rs  tzu.nim  tzu2.nim  tzutrader.nim  tzutrader_cli.nim  tzutrader_cligen.nim
tests/: CMakeLists.txt  test_combination_strategies.nim  test_core.nim  test_data.nim  test_datastreamers.nim  test_decl_all.nim  test_decl_batch_parser.nim  test_decl_error_messages.nim  test_decl_expression.nim  test_decl_integration.nim  test_decl_parser.nim  test_decl_schema.nim  test_decl_strategy_builder.nim  test_decl_validator.nim  test_decl_warnings.nim  test_export.nim  test_export.nim.pending  test_indicators.nim  test_oscillator_strategies.nim  test_portfolio.nim  test_runner.nim.pending  test_scanner.nim  test_strategy.nim  test_strategy_multidata.nim  test_trader.nim  test_volatility_strategies.nim
tests/data/: btcusd.csv  btcusd_singlevalue.csv  btcusd_tick.csv  downtrend.csv  ranging.csv  uptrend.csv  volatile.csv
tests/declarative/: test_all.nim  test_batch_parser.nim  test_error_messages.nim  test_expression.nim  test_integration.nim  test_parser.nim  test_phase3.nim  test_phase4.nim  test_schema.nim  test_strategy_builder.nim  test_validator.nim  test_warnings.nim
tests/declarative/fixtures/: README.md  invalid_duplicate_ids.yml  invalid_no_name.yml  invalid_undefined_ref.yml  valid_expression_indicator.yml  valid_indicator_comparison.yml  valid_macd.yml  valid_not_condition.yml  valid_rsi.yml  valid_rsi_trend.yml
tests/indicators/: test_ema.cc  test_macd.cc  test_mdd.cc  test_mvar.cc  test_rsi.cc  test_sma.cc
tests/screener/: test_alerts.nim  test_history.nim  test_integration.nim  test_parser.nim  test_reports.nim  test_reports_debug.nim
tests/strategies/: test_crossover.cc  test_macd.cc  test_rsi.cc
tests/streamers/: test_csv.cc
tools/: generate_csv_data.nim
(+426 files in other folders)
