cmake_minimum_required(VERSION 3.3)
project(tzutrader)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SRC_DIR "${CMAKE_SOURCE_DIR}/src")
set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
file(GLOB LIB_SOURCES "${SRC_DIR}/*.cc")
add_library(tzutrader STATIC ${LIB_SOURCES})
include_directories(${INCLUDE_DIR})
install(DIRECTORY ${INCLUDE_DIR}/ DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
if(EXISTS "${CMAKE_SOURCE_DIR}/examples/example01.cc")
    add_executable(example01 "${CMAKE_SOURCE_DIR}/examples/example01.cc")
    target_include_directories(example01 PRIVATE ${INCLUDE_DIR})
    set_target_properties(example01 PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
endif()
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(tzutrader PRIVATE -g -O0 -Wall -Wextra)
    if(TARGET example01)
        target_compile_options(example01 PRIVATE -g -O0 -Wall -Wextra)
    endif()
else()
    target_compile_options(tzutrader PRIVATE -O3 -march=native -DNDEBUG -Wall -Wextra)
    if(TARGET example01)
        target_compile_options(example01 PRIVATE -O3 -march=native -DNDEBUG -Wall -Wextra)
    endif()
endif()
