cmake_minimum_required(VERSION 3.3)
project(tzutrader)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(SRC_DIR "${CMAKE_SOURCE_DIR}/src")
set(INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
file(GLOB LIB_SOURCES "${SRC_DIR}/*.cc")
add_library(tzutrader STATIC ${LIB_SOURCES})
include_directories(${INCLUDE_DIR})
install(DIRECTORY ${INCLUDE_DIR}/ DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
file(GLOB_RECURSE EXAMPLE_SOURCES "${CMAKE_SOURCE_DIR}/examples/**/*.cc")
foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
    get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE} NAME_WE)
    add_executable(${EXAMPLE_NAME} ${EXAMPLE_SOURCE})
    target_include_directories(${EXAMPLE_NAME} PRIVATE ${INCLUDE_DIR})
    target_link_libraries(${EXAMPLE_NAME} tzutrader)
    set_target_properties(${EXAMPLE_NAME} PROPERTIES 
        CXX_STANDARD 11 
        CXX_STANDARD_REQUIRED ON
        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
endforeach()
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_options(tzutrader PRIVATE -g -O0 -Wall -Wextra)
    foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
        get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE} NAME_WE)
        target_compile_options(${EXAMPLE_NAME} PRIVATE -g -O0 -Wall -Wextra)
    endforeach()
else()
    target_compile_options(tzutrader PRIVATE -O3 -march=native -DNDEBUG -Wall -Wextra)
    foreach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
        get_filename_component(EXAMPLE_NAME ${EXAMPLE_SOURCE} NAME_WE)
        target_compile_options(${EXAMPLE_NAME} PRIVATE -O3 -march=native -DNDEBUG -Wall -Wextra)
    endforeach()
endif()
